# warp-solar-system-shaders

./: .gitignore  CHANGELOG.md  CLAUDE.md  INTEGRATION.md  README.md  bench.py  build_genome_chain.py  index.html  mkdocs.yml  play.py  pyproject.toml  reel.py  render.py  requirements.txt  scrub.py  serve.sh  simulate.py  simulate_earth.py  watch.py
chromofold/: README.md  __init__.py  cli.py
docs/: bench_frontier_results.md  bench_gpu_results.md  bench_stack_results.md  bench_weights_results.md  chromofold.md  chromofold_format.md  chromofold_positioning.md  chromofold_related_work.md  concepts.md  engine.md  gallery.md  genome_chain_runbook.md  genome_compression_math.md  index.md  prompt_cache_results.md  quickstart.md  requirements.txt
examples/: compress_weights.py  serve_compressed_kv.py
hf_space/: README.md  app.py  demo.py  requirements.txt
js/: app.js  player.js
reference/: black-hole.frag  neutron-star.frag  planet.frag  sun.frag
shaders/: manifest.json  template.frag
tests/: test_api.py  test_autotune.py  test_awq.py  test_basepair.py  test_bench_frontier.py  test_bench_gpu.py  test_bench_stack.py  test_blast.py  test_boards.py  test_buildings.py  test_camera_path.py  test_cardfold.py  test_chromofold.py  test_chromosome.py  test_cosmos.py  test_cosmos_phenomena.py  test_dedup.py  test_electric.py  test_electronics.py  test_em.py  test_engine.py  test_engine_leap.py  test_fiber.py  test_fibre.py  test_foldcube.py  test_format.py  test_fractal.py  test_frontiers.py  test_frontiers2.py  test_frontiers3.py  test_galaxy_dynamics.py  test_gargantua.py  test_genome.py  test_genome_journey.py  test_gpu_block_huffman.py  test_gpu_delta.py  (+54 more)
(+487 files in other folders)
